Updated solutis experience

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -146,6 +146,48 @@
     <section class="c-section">
       <h1 class="section-title">Professional Experiences</h1>
       <table class="experiences">
+
+        <tr>
+          <td class="date-range">08/2020 - today</td>
+          <td>
+            <p class="experience-title company-name">
+              <img class="company-logo"
+                src="https://media-exp1.licdn.com/dms/image/C4E0BAQG8dVHdZkr_0g/company-logo_100_100/0?e=1601510400&v=beta&t=l34hdokegoLB40vf1oOY3S6ygbvhyTtY6LzaKgHwl4U" />
+              Solutis Tecnologias
+            </p>
+            <p>Development of a SAAS for a financial institution(the same of previous institution)</p>
+            <span class="assignments">Main Activities:</span><br />
+            <ul class="summary-list">
+              <li>
+                &#187; Pair programming.
+              </li>
+              <li>
+                &#187; unit tests with karma and jasmine.
+              </li>
+              <li>
+                &#187; e2e testes with Cypress.
+              </li>
+              <li>
+                &#187; Do code review.
+              </li>
+              <li>
+                &#187; Participate in SCRUM cerimonies(planning, daily, reviews,
+                retrospectives).
+              </li>
+              <li>
+                &#187; Colaborate with UX team suggesting improvements.
+              </li>
+            </ul>
+            <p>
+              <span class="experience-title">Main tools and technologies:
+              </span>
+              Angular 8, Typescript, SCSS, Git, Jira, confluence, InVision,
+              Zeplin, Inkscape, Postman, MS Teams
+            </p>
+            <a href="javascript:void(0);" class="btn-more">More...</a>
+          </td>
+        </tr>
+        <!-- SEPARATOR -->
         <tr>
           <td class="date-range">02/2020 - 07/2020</td>
           <td>
@@ -177,8 +219,8 @@
             <p>
               <span class="experience-title">Main tools and technologies:
               </span>
-              Angular 8, Typescrypt, SCSS, Git, Jira, confluence, InVision,
-              Zeplin
+              Angular 8, Typescript, SCSS, Git, Jira, confluence, InVision,
+              Zeplin, Inkscape, NgxCharts
             </p>
             <a href="javascript:void(0);" class="btn-more">More...</a>
           </td>
@@ -195,7 +237,7 @@
             <span class="assignments">Assignments:</span>
             <ul class="summary-list">
               <li>
-                &#187; Maintenance in a SAAS Platform(web and mobile) for
+                &#187; Maintenance in a gamified SAAS Platform(web and mobile) for
                 preventive health.
               </li>
               <li>
@@ -204,11 +246,14 @@
               <li>
                 &#187; Build new features.
               </li>
+              <li>
+                &#187; Fix bugs.
+              </li>
             </ul>
             <p>
               <span class="experience-title">Main tools and technologies:
               </span>
-              Ionic cordova(for mobile app), AngularJs git, Jira, VS Code,
+              Ionic cordova(for mobile app), AngularJs, AngularJs Material, git, Jira, VS Code,
               Angular 5, Angular CLI, Typescrypt, SASS, npm
             </p>
             <a href="javascript:void(0);" class="btn-more">More...</a>
@@ -757,7 +802,7 @@
               <span class="experience-title">Principais ferramentas e tecnologias:
               </span>
               Angular 8, Typescrypt, SCSS, Git, Jira, confluence, InVision,
-              Zeplin
+              Zeplin, Inkscape, NgxCharts
             </p>
             <a href="javascript:void(0);" class="btn-more">More...</a>
           </td>
@@ -775,7 +820,7 @@
             <span class="assignments">Attribuições:</span>
             <ul class="summary-list">
               <li>
-                &#187; Manutenção em plataforma(web and mobile) SAAS de saúde
+                &#187; Manutenção em plataforma gameficada(web and mobile) SAAS de saúde
                 preventiva.
               </li>
               <li>
@@ -788,7 +833,7 @@
             <p>
               <span class="experience-title">Principais ferramentas e tecnologias:
               </span>
-              Ionic cordova(for mobile app), AngularJs git, Jira, VS Code,
+              Ionic cordova(for mobile app), AngularJs, AngularJs Material, git, Bitbucket , Jira, Confluence, VS Code,
               Angular 5, Angular CLI, Typescrypt, SASS, npm
             </p>
             <a href="javascript:void(0);" class="btn-more">More...</a>
