--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -2,20 +2,20 @@
   <div class="container">
     <header class="row page-header">
       <div class="logo">
-        <img width="270" src="./assets/images/icon-curriculum-header.svg" />
+        <img width="270" src="dist/assets/images/icon-curriculum-header.svg" />
       </div>
       <div class="page-title">
         <h1 class="name">Itamar Serafim Silva</h1>
         <p class="last-updated">
           Last updated: feb/28/2020 &nbsp;
           <span class="header-flags" [ngClass]="{ active: lang === 'pt' }" (click)="lang = 'pt'"><img
-              src="./assets/images/flag-br.svg" /></span>
+              src="dist/assets/images/flag-br.svg" /></span>
 
           <span class="header-flags active" [ngClass]="{ active: lang === 'en' }" (click)="lang = 'en'"><img
-              src="./assets/images/flag-us.svg" /></span>
+              src="dist/assets/images/flag-us.svg" /></span>
 
           <span class="header-flags" [ngClass]="{ active: lang === 'fr' }" (click)="lang = 'fr'"><img
-              src="./assets/images/flag-fr.svg" /></span>
+              src="dist/assets/images/flag-fr.svg" /></span>
         </p>
         <button hidden="true" (click)="print()" color="primary" class="mat-elevation-z0 print-button no-print"
           aria-label="Print" mat-mini-fab>
@@ -89,7 +89,7 @@
             </td>
           </tr>
         </table>
-        <img src="../assets/images/me.png" alt="photo" title="Itamar Serafim Silva">
+        <img src=".dist/assets/images/me.png" alt="photo" title="Itamar Serafim Silva">
       </div>
     </section>
 
@@ -195,7 +195,7 @@
           <td class="date-range">02/2020 - 07/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/gft.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/gft.svg" />
               GFT Group
             </p>
             <p>Development of a SAAS for a financial institution</p>
@@ -232,7 +232,7 @@
           <td class="date-range">05/2019 - 02/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/ignilife.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/ignilife.svg" />
               Ignilife
             </p>
             <span class="assignments">Assignments:</span>
@@ -265,7 +265,7 @@
           <td class="date-range">03/2019 - 05/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/indra.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/indra.svg" />
               Indra
             </p>
             <p>Development of modules for ATM machine.</p>
@@ -286,7 +286,7 @@
           <td class="date-range">06/2018 - 03/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/iteris.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/iteris.svg" />
               Iteris
             </p>
             <p>Platform for integrating companies, schools and students.</p>
@@ -343,7 +343,7 @@
           <td class="date-range">08/2014 - 08/2016</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(for the second time)
             </p>
             <p>
@@ -405,7 +405,7 @@
           <td class="date-range">01/2013 – 04/2014</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="./assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(first time)
             </p>
             <p>
@@ -624,20 +624,20 @@
   <div class="container">
     <header class="row page-header">
       <div class="logo">
-        <img width="270" src="./assets/images/icon-curriculum-header.svg" />
+        <img width="270" src="dist/assets/images/icon-curriculum-header.svg" />
       </div>
       <div class="page-title">
         <h1 class="name">Itamar Serafim Silva</h1>
         <p class="last-updated">
           Última atualização: 01/jul/2020 &nbsp;
           <span class="header-flags" [ngClass]="{ active: lang === 'pt' }" (click)="lang = 'pt'"><img
-              src="./assets/images/flag-br.svg" /></span>
+              src="dist/assets/images/flag-br.svg" /></span>
 
           <span class="header-flags active" [ngClass]="{ active: lang === 'en' }" (click)="lang = 'en'"><img
-              src="./assets/images/flag-us.svg" /></span>
+              src="dist/assets/images/flag-us.svg" /></span>
 
           <span class="header-flags" [ngClass]="{ active: lang === 'fr' }" (click)="lang = 'fr'"><img
-              src="./assets/images/flag-fr.svg" /></span>
+              src="dist/assets/images/flag-fr.svg" /></span>
         </p>
         <button (click)="print()" hidden="true" color="primary" class="mat-elevation-z0 print-button" aria-label="Print"
           mat-mini-fab>
@@ -1209,20 +1209,20 @@
   <div class="container">
     <header class="row page-header">
       <div class="logo">
-        <img width="270" src="./assets/images/icon-curriculum-header.svg" />
+        <img width="270" src="dist/assets/images/icon-curriculum-header.svg" />
       </div>
       <div class="page-title">
         <h1 class="name">Itamar Serafim Silva</h1>
         <p class="last-updated">
           Dernière mise à jour : 01/jul/2020 &nbsp;
           <span class="header-flags" [ngClass]="{ active: lang === 'pt' }" (click)="lang = 'pt'"><img
-              src="./assets/images/flag-br.svg" /></span>
+              src="dist/assets/images/flag-br.svg" /></span>
 
           <span class="header-flags active" [ngClass]="{ active: lang === 'en' }" (click)="lang = 'en'"><img
-              src="./assets/images/flag-us.svg" /></span>
+              src="dist/assets/images/flag-us.svg" /></span>
 
           <span class="header-flags" [ngClass]="{ active: lang === 'fr' }" (click)="lang = 'fr'"><img
-              src="./assets/images/flag-fr.svg" /></span>
+              src="dist/assets/images/flag-fr.svg" /></span>
         </p>
         <button (click)="print()" hidden="true" color="primary" class="mat-elevation-z0 print-button" aria-label="Print"
           mat-mini-fab>
