fixing scripts paths

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -89,7 +89,7 @@
             </td>
           </tr>
         </table>
-        <img src=".dist/assets/images/me.png" alt="photo" title="Itamar Serafim Silva">
+        <img src="dist/assets/images/me.png" alt="photo" title="Itamar Serafim Silva">
       </div>
     </section>
 
