--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -149,9 +149,37 @@
     <section class="c-section">
       <h1 class="section-title">Professional Experiences</h1>
       <table class="experiences">
+        <tr>
+          <td class="date-range">08/2021 - today</td>
+          <td>
+            <p class="experience-title company-name"><img
+                srcs="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg"
+                src="dist/assets/images/companies-logos/epam.png" class="company-logo" style="
+          width: 39px;
+          border-radius: 8px;
+          padding: 3px;
+          position: relative;
+          margin-bottom: -10px;
+          margin-right: .5em;
+          background-color: #231f1f;
+          padding: .5em;
+      "> EPAM </p>
+            <p>Development of a Video Conference App for client in health industry</p><span class="assignments">Main
+              Activities:</span><br>
+            <ul class="summary-list">
+              <li> » Code maintenance. </li>
+              <li> » Fix bugs. </li>
+              <li> » Do code review. </li>
+              <li> » Participate in SCRUM cerimonies(planning, daily, reviews, retrospectives). </li>
+              <li> » Colaborate with business team suggesting improvements. </li>
+            </ul>
+            <p><span class="experience-title">Main tools and technologies: </span> Angular 11, Typescript, SCSS, Gitlab,
+              Jira, confluence, Zeplin </p>
+          </td>
+        </tr>
 
         <tr>
-          <td class="date-range">08/2020 - today</td>
+          <td class="date-range">08/2020 - 08/2021</td>
           <td>
             <p class="experience-title company-name">
               <img class="company-logo"
