Added experiences for EPAM and Praxis

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -7,7 +7,7 @@
       <div class="page-title">
         <h1 class="name">Itamar Serafim Silva</h1>
         <p class="last-updated">
-          Last updated: feb/28/2020 &nbsp;
+          Last updated: oct/07/2020 &nbsp;
           <span class="header-flags" [ngClass]="{ active: lang === 'pt' }" (click)="lang = 'pt'"><img
               src="dist/assets/images/flag-br.svg" /></span>
 
@@ -149,6 +149,107 @@
     <section class="c-section">
       <h1 class="section-title">Professional Experiences</h1>
       <table class="experiences">
+
+
+        <tr>
+          <td class="date-range">03/2022 - today</td>
+          <td>
+            <p class="experience-title company-name">
+              <!-- <img class="company-logo"
+                src="https://media-exp1.licdn.com/dms/image/C4E0BAQFKFEaP4rsn-w/company-logo_200_200/0/1572622293509?e=2159024400&v=beta&t=0aRn54BPZPWTyqLBINPm9up8YHBCZCeCuT3hJKiUVN8" /> -->
+              Praxis, client BMC(USA)
+            </p>
+            <p>Development of a dataops SaaS. Work in innovation lab.</p>
+            <span class="assignments">Main Activities:</span><br />
+            <ul class="summary-list">
+              <li>
+                &#187; Plan and execute frontend architecture.
+              </li>
+              <li>
+                &#187; Code new features.
+              </li>
+              <li>
+                &#187; Do code review.
+              </li>
+              <li>
+                &#187; Colaborate with UX and business teams to refine requirements and suggest improvements.
+              </li>
+              <li>
+                &#187; Create spikes/POC.
+              </li>
+            </ul>
+
+            <p>
+              <span class="experience-title">Main tools and technologies:
+              </span>
+              Angular v12-v14, npm, Typescript, SCSS, Git, Jira, confluence,
+              Figma, Inkscape, Postman, MS Teams, MS Word.
+            </p>
+            <a href="javascript:void(0);" class="btn-more">More...</a>
+          </td>
+        </tr>
+
+        <!-- SEPARATOR -->
+
+
+        <tr>
+          <td class="date-range">08/2021 - 01/2022</td>
+          <td>
+            <p class="experience-title company-name">
+              <!-- <img class="company-logo"
+                src="https://media-exp1.licdn.com/dms/image/C4E0BAQFKFEaP4rsn-w/company-logo_200_200/0/1572622293509?e=2159024400&v=beta&t=0aRn54BPZPWTyqLBINPm9up8YHBCZCeCuT3hJKiUVN8" /> -->
+              EPAM Systems, client AmericamWell(USA)
+            </p>
+            <p>Development of new features in a health care system at AmericanWell.</p>
+            <span class="assignments">Main Activities:</span><br />
+            <ul class="summary-list">
+              <li>
+                &#187; Code new features.
+              </li>
+              <li>
+                &#187; Fix bugs.
+              </li>
+              <li>
+                &#187; Create unit tests(Karma and Jasmine).
+              </li>
+              <li>
+                &#187; Do code review.
+              </li>
+              <li>
+                &#187; Participate in SCRUM cerimonies(planning, daily, reviews,
+                retrospectives).
+              </li>
+              <li>
+                &#187; Colaborate with UX and business teams suggesting improvements.
+              </li>
+              <li>
+                &#187; Create spikes/POC.
+              </li>
+            </ul>
+            <div>
+              <span class="experience-title">Key contributions:
+              </span>
+              <ul class="summary-list">
+                <li>
+                  &#187; Creation and improvements of comopnents inthe user feedback journey.
+                </li>
+                <li>
+                  &#187; Implementation of authentication and authorization with Angular and Auth0.
+                </li>
+              </ul>
+            </div>
+
+            <p>
+              <span class="experience-title">Main tools and technologies:
+              </span>
+              Angular 10, Angular Material, npm Typescript, SCSS, Git, Jira, confluence,
+              Zeplin, InVision, Inkscape, Postman, MS Teams.
+            </p>
+            <a href="javascript:void(0);" class="btn-more">More...</a>
+          </td>
+        </tr>
+
+        <!-- SEPARATOR -->
 
         <tr>
           <td class="date-range">08/2020 - today</td>
