Updated files paths

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -194,8 +194,7 @@
           <td class="date-range">08/2021 - 01/2022</td>
           <td>
             <p class="experience-title company-name">
-              <!-- <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQFKFEaP4rsn-w/company-logo_200_200/0/1572622293509?e=2159024400&v=beta&t=0aRn54BPZPWTyqLBINPm9up8YHBCZCeCuT3hJKiUVN8" /> -->
+              <img class="company-logo" src="dist/assets/images/companies-logos/epam.png" />
               EPAM Systems, client AmericamWell(USA)
             </p>
             <p>Development of new features in a health care system at AmericanWell.</p>
