--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -155,6 +155,8 @@
             <p class="experience-title company-name">
               <!-- <img class="company-logo"
                 src="https://media-exp1.licdn.com/dms/image/C4E0BAQFKFEaP4rsn-w/company-logo_200_200/0/1572622293509?e=2159024400&v=beta&t=0aRn54BPZPWTyqLBINPm9up8YHBCZCeCuT3hJKiUVN8" /> -->
+                <img class="company-logo" alt="Praxis" src="../assets/images/companies-logos/praxis.png"
+                style="width: 55px;" />
               Praxis, client BMC(USA)
             </p>
             <p>Development of a dataops SaaS. Work in innovation lab.</p>
@@ -194,7 +196,8 @@
           <td class="date-range">08/2021 - 01/2022</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/epam.png" />
+              <img class="company-logo" alt="EPAM" src="../assets/images/companies-logos/epam.png"
+                style="width: 51px;height: 35px;" />
               EPAM Systems, client AmericamWell(USA)
             </p>
             <p>Development of new features in a health care system at AmericanWell.</p>
@@ -292,7 +295,7 @@
           <td class="date-range">02/2020 - 07/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/gft.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/gft.svg" />
               GFT Group
             </p>
             <p>Development of a SAAS for a financial institution</p>
@@ -329,7 +332,7 @@
           <td class="date-range">05/2019 - 02/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/ignilife.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/ignilife.svg" />
               Ignilife
             </p>
             <span class="assignments">Assignments:</span>
@@ -362,7 +365,7 @@
           <td class="date-range">03/2019 - 05/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/indra.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/indra.svg" />
               Indra
             </p>
             <p>Development of modules for ATM machine.</p>
@@ -383,7 +386,7 @@
           <td class="date-range">06/2018 - 03/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/iteris.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/iteris.svg" />
               Iteris
             </p>
             <p>Platform for integrating companies, schools and students.</p>
@@ -410,8 +413,7 @@
           <td class="date-range">06/2017 - 07/2017</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://s3.us-east-2.amazonaws.com/startse-comunidade/uploads/croppedImg_1516332442.jpeg" />
+              <img class="company-logo" src="../assets/images/companies-logos/isquik.png" />
               IsQuik Brasil
             </p>
             <p class="assignments">Assignments:</p>
@@ -440,7 +442,7 @@
           <td class="date-range">08/2014 - 08/2016</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(for the second time)
             </p>
             <p>
@@ -502,7 +504,7 @@
           <td class="date-range">01/2013 – 04/2014</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="dist/assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" src="../assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(first time)
             </p>
             <p>
