Updated logos paths

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -153,9 +153,7 @@
           <td class="date-range">03/2022 - today</td>
           <td>
             <p class="experience-title company-name">
-              <!-- <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQFKFEaP4rsn-w/company-logo_200_200/0/1572622293509?e=2159024400&v=beta&t=0aRn54BPZPWTyqLBINPm9up8YHBCZCeCuT3hJKiUVN8" /> -->
-                <img class="company-logo" alt="Praxis" src="../assets/images/companies-logos/praxis.png"
+                <img class="company-logo" alt="Praxis" src="dist/assets/images/companies-logos/praxis.png"
                 style="width: 55px;" />
               Praxis, client BMC(USA)
             </p>
@@ -196,7 +194,7 @@
           <td class="date-range">08/2021 - 01/2022</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" alt="EPAM" src="../assets/images/companies-logos/epam.png"
+              <img class="company-logo" alt="EPAM" src="dist/assets/images/companies-logos/epam.png"
                 style="width: 51px;height: 35px;" />
               EPAM Systems, client AmericamWell(USA)
             </p>
@@ -295,7 +293,7 @@
           <td class="date-range">02/2020 - 07/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/gft.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/gft.svg" />
               GFT Group
             </p>
             <p>Development of a SAAS for a financial institution</p>
@@ -332,7 +330,7 @@
           <td class="date-range">05/2019 - 02/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/ignilife.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/ignilife.svg" />
               Ignilife
             </p>
             <span class="assignments">Assignments:</span>
@@ -365,7 +363,7 @@
           <td class="date-range">03/2019 - 05/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/indra.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/indra.svg" />
               Indra
             </p>
             <p>Development of modules for ATM machine.</p>
@@ -386,7 +384,7 @@
           <td class="date-range">06/2018 - 03/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/iteris.svg" />
+              <img class="company-logo" src="dist/assets/images/companies-logos/iteris.svg" />
               Iteris
             </p>
             <p>Platform for integrating companies, schools and students.</p>
@@ -413,7 +411,7 @@
           <td class="date-range">06/2017 - 07/2017</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/isquik.png" />
+              <img class="company-logo" alt="IsQuik Brasil" src="dist/assets/images/companies-logos/isquik.png" />
               IsQuik Brasil
             </p>
             <p class="assignments">Assignments:</p>
@@ -442,7 +440,7 @@
           <td class="date-range">08/2014 - 08/2016</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" alt="Class Solutions" src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(for the second time)
             </p>
             <p>
@@ -504,7 +502,7 @@
           <td class="date-range">01/2013 – 04/2014</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo" src="../assets/images/companies-logos/class-solutions.svg" />
+              <img class="company-logo" alt="Class Solutions" src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(first time)
             </p>
             <p>
@@ -869,8 +867,8 @@
           <td class="date-range">02/2020 - 07/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQG8dVHdZkr_0g/company-logo_100_100/0?e=1601510400&v=beta&t=l34hdokegoLB40vf1oOY3S6ygbvhyTtY6LzaKgHwl4U" />
+              <img class="company-logo" alt="GFT Group"
+                src="dist/assets/images/companies-logos/gft.svg" />
               GFT Group
             </p>
             <p>Desenvolvimento de um SAAS em uma instituição financeira.</p>
@@ -908,8 +906,8 @@
           <td class="date-range">05/2019 - 02/2020</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQFYfXmc89slmg/company-logo_100_100/0?e=1601510400&v=beta&t=e2ijgAp71kLSDtxFtLsWJIE0JEW-fjsLYGlVoBSXHlY" />
+              <img class="company-logo" alt="Ignilife"
+                src="dist/assets/images/companies-logos/ignilife.jpeg" />
               Ignilife
             </p>
             <p></p>
@@ -940,8 +938,8 @@
           <td class="date-range">03/2019 - 05/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4D0BAQHX2zsMj7NLNQ/company-logo_100_100/0?e=1601510400&v=beta&t=Y6S2JZO-SiegUyF2Rk3VicVQehBmDsT-0tFw1zwMYJs" />
+              <img class="company-logo" alt="Indra"
+                src="dist/assets/images/companies-logos/indra.svg" />
               Indra
             </p>
             <p>Desenvolvimento de módulos para caixa eletônico.</p>
@@ -962,8 +960,8 @@
           <td class="date-range">06/2018 - 03/2019</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4D0BAQErEWFu9IWJQw/company-logo_100_100/0?e=1601510400&v=beta&t=fhbB4Q61B3kj_0KrI_NKVvclGGZlmSAH8-O7eZnRT7k" />
+              <img class="company-logo" alt="Iteris"
+                src="dist/assets/images/companies-logos/iteris.svg" />
               Iteris
             </p>
             <p>
@@ -994,8 +992,8 @@
           <td class="date-range">06/2017 - 07/2017</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://s3.us-east-2.amazonaws.com/startse-comunidade/uploads/croppedImg_1516332442.jpeg" />
+              <img class="company-logo" alt="IsQuik Brasil"
+                src="dist/assets/images/companies-logos/isquik.png" />
               IsQuik Brasil
             </p>
             <p class="assignments">Attribuições:</p>
@@ -1025,8 +1023,8 @@
           <td class="date-range">08/2014 - 08/2016</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQGIo0POXe81dw/company-logo_100_100/0?e=1601510400&v=beta&t=1ywVbYRyUQD4WkVxyQJPO9BoJAwQXupV3GKWjK_8BF4" />
+              <img class="company-logo" alt="Class Solutions"
+                src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(for the second time)
             </p>
             <p>
@@ -1088,8 +1086,8 @@
           <td class="date-range">01/2013 – 04/2014</td>
           <td>
             <p class="experience-title company-name">
-              <img class="company-logo"
-                src="https://media-exp1.licdn.com/dms/image/C4E0BAQGIo0POXe81dw/company-logo_100_100/0?e=1601510400&v=beta&t=1ywVbYRyUQD4WkVxyQJPO9BoJAwQXupV3GKWjK_8BF4" />
+              <img class="company-logo" alt="Class Solutions"
+                src="dist/assets/images/companies-logos/class-solutions.svg" />
               Class Systems Solutions(first time)
             </p>
             <p>
